<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey">

    <TextView
        android:id="@+id/details_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/enter_details"
        android:textColor="@color/text_primary"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit_text_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/details_description"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rectangle_border"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
        android:hint="@string/first_name"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        android:maxLength="30"
        android:maxLines="1"
        android:padding="7dp"
        android:singleLine="true"
        android:textColor="@color/text_primary"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit_text_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_first_name"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rectangle_border"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
        android:hint="@string/last_name"
        android:imeOptions="actionDone"
        android:inputType="textCapWords"
        android:maxLength="30"
        android:maxLines="1"
        android:padding="7dp"
        android:singleLine="true"
        android:textColor="@color/text_primary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#80e5ff"
        android:gravity="center"
        android:paddingStart="9dp"
        android:paddingTop="15dp"
        android:paddingEnd="9dp"
        android:paddingBottom="15dp"
        android:text="@string/button_continue"
        android:textAllCaps="true"
        android:textColor="@color/text_primary"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>