<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:id="@+id/main_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_header"
        android:padding="10dp">

        <TextView
            android:id="@+id/hello_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/logout_button"
            android:gravity="center|center_vertical"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/logout_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/logout_icon" />

    </RelativeLayout>

    <Spinner
        android:id="@+id/date_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_header"
        android:layout_margin="10dp"
        android:padding="7dp" />

    <TextView
        android:id="@+id/account_balance_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_spinner"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/account_balance"
        android:textColor="@color/text_primary"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/account_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_balance_text"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textColor="@color/text_primary"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/transactions_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_balance"
        android:layout_marginStart="7dp"
        android:layout_marginTop="25dp"
        android:text="@string/transactions"
        android:textColor="@color/text_primary"
        android:textSize="22sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/transactions_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/my_accounts_button"
        android:layout_below="@+id/transactions_text"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:id="@+id/my_accounts_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/background_button"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingStart="9dp"
        android:paddingTop="15dp"
        android:paddingEnd="9dp"
        android:paddingBottom="15dp"
        android:text="@string/my_accounts"
        android:textAllCaps="true"
        android:textColor="@color/text_primary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/progress_bar_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_grey">

        <ProgressBar
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center" />
    </FrameLayout>
</RelativeLayout>